--- a/src/TatBlog.WebApp/Views/Shared/_SearchForm.cshtml
+++ b/src/TatBlog.WebApp/Views/Shared/_SearchForm.cshtml
@@ -6,9 +6,9 @@
     <div class="input-group mb-3">
       <input type="text" 
               class="form-control"
-              name="title"
-              placeholder="Enter Title"
-              aria-label="Enter Title"
+              name="keyword"
+              placeholder="Enter Keyword"
+              aria-label="Enter Keyword"
               aria-describedby="btnSearchPost"
               >
       <button type="submit" 
