--- a/src/TatBlog.WebApp/Views/Shared/_SideBar.cshtml
+++ b/src/TatBlog.WebApp/Views/Shared/_SideBar.cshtml
@@ -1,17 +1,17 @@
+@{
+  var newsLetterController = new NewsLetterController();
+}
+
 <div class="my-4">
   <partial name="_SearchForm" />
   
   @await Component.InvokeAsync("CategoriesWidget")
   
-  <h1>
-    Bài viết nổi bật
-  </h1>
+  @await Component.InvokeAsync("FeaturedPosts")
   
-  <h1>
-    Đăng kí nhận tin mới
-  </h1>
+  <partial name="_NewsletterForm" model="newsLetterController"/>
   
-  <h1>
-    Tag cloud
-  </h1>
+  @await Component.InvokeAsync("TagCloud")
+
+  @await Component.InvokeAsync("Archives")
 </div>
