--- a/src/TatBlog.WebApp/Views/_ViewImports.cshtml
+++ b/src/TatBlog.WebApp/Views/_ViewImports.cshtml
@@ -3,4 +3,7 @@
 @using TatBlog.Core.Constants
 @using TatBlog.Core.Collections
 @using TatBlog.Core.DTO
+@using System.Collections.Generic
+@using System.Globalization
+@using TatBlog.WebApp.Controllers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
