--- a/src/TatBlog.WebApp/Areas/Admin/Views/Shared/_NavBar.cshtml
+++ b/src/TatBlog.WebApp/Areas/Admin/Views/Shared/_NavBar.cshtml
@@ -67,6 +67,15 @@
               Bình luận
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark"
+              asp-area="Admin"
+              asp-controller="Subscribers"
+              asp-action="Index"
+              title="Xem danh sách độc giả">
+              Độc giả
+            </a>
+          </li>
         </ul>
       </div>
     </div>
