--- a/src/TatBlog.WebApp/Views/Blog/_NewsLetterForm.cshtml
+++ b/src/TatBlog.WebApp/Views/Blog/_NewsLetterForm.cshtml
@@ -1,5 +1,3 @@
-@model NewsLetterController
-
 <div class="mb-4">
   <h3 class="text-success mb-2">
     Đăng ký nhận thông báo khi có bài viết mới
@@ -7,14 +5,15 @@
 
   <div class="row">
     <section>
-        <form method="post">
-          <div asp-validation-summary="All" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Email">Email</label>
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Đăng ký</button>
+        <form method="post"
+              asp-area=""
+              asp-controller="NewsLetter"
+              asp-action="Subscribe">
+          <div class="form-floating mb-3">
+              <input id="email" name="email" class="form-control" autocomplete="email" aria-required="true" placeholder="name@example.com" />
+              <label for="email" class="form-label" >Email</label>
+          </div>
+          <button type="submit" class="btn btn-primary">Đăng ký</button>
         </form>
     </section>
   </div>
