--- a/src/TatBlog.WebApp/Views/_ViewImports.cshtml
+++ b/src/TatBlog.WebApp/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using System.Collections.Generic
 @using System.Globalization
 @using TatBlog.WebApp.Controllers
+@using TatBlog.WebApp.Areas.Admin.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
