--- a/src/TatBlog.WebApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/src/TatBlog.WebApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using TatBlog.WebApp
 @using TatBlog.Core.Entities
-@using TatBlog.Core.Constants
+@using TatBlog.Core.Contracts
 @using TatBlog.Core.Collections
 @using TatBlog.Core.DTO
 @using System.Collections.Generic
