--- a/src/TatBlog.WebApp/Views/Blog/Index.cshtml
+++ b/src/TatBlog.WebApp/Views/Blog/Index.cshtml
@@ -13,7 +13,7 @@
   @if (!string.IsNullOrWhiteSpace(postQuery.Keyword))
   {
     <h3 class="text-primary mb-3">
-      Những bài viết chứa tiêu đề '@postQuery.Keyword'
+      Những bài viết với từ khoá '@postQuery.Keyword'
     </h3>
   }
   else
