--- a/src/TatBlog.WebApp/Views/Shared/_SearchForm.cshtml
+++ b/src/TatBlog.WebApp/Views/Shared/_SearchForm.cshtml
@@ -2,7 +2,7 @@
   <form method="get"
         asp-controller="Blog"
         asp-action="Index"
-  >
+        asp-area="">
     <div class="input-group mb-3">
       <input type="text" 
               class="form-control"
